tests/rand/08-fail-for-struct-enum.stderr
error: proc-macro derive panicked
 --> tests/rand/08-fail-for-struct-enum.rs:3:10
  |
3 | #[derive(Rand)]
  |          ^^^^
  |
  = help: message: enums with variants containing fields are not supported.
          Messages::Letter has a field
